# XGBox

./: .gitignore  Makefile.am  README.md  configure.ac
3rd/log/: Makefile.am  README.md
3rd/log/src/: log.c  log.h
include/: xgbox.h  xgbox_log.h
include/at/: xgbox_at.h
include/sms/: xgbox_sms.h  xgbox_sms_pdu.h
include/tty/: xgbox_tty.h
source/: Makefile.am  xgbox.c  xgbox_log.c
source/at/: Makefile.am  xgbox_at.c
source/sms/: Makefile.am  xgbox_sms.c  xgbox_sms_pdu.c
source/tty/: Makefile.am  xgbox_tty.c
